--- a/content/post/2017-12-14-part-1-deep-learning-with-closures-in-r.Rmd
+++ b/content/post/2017-12-14-part-1-deep-learning-with-closures-in-r.Rmd
@@ -13,6 +13,12 @@ tags: []
 
 # Start of a small series
 
+The gif below is the evolution of the weights on mnist, trained over the first three epochs. Mnist is a dataset of handwritten digits, and is kind of the **hello world/FizzBuzz** of machine learning. It is maybe not a very challenging data set, but you can learn a lot from it. This is a 10 by 10 grid of images, where each individual small patch represents weights going to a single neuron in the first hidden layer. After I saw the content by Grant Sanderson, I wanted to inspect by myself what the network is actually learning. This series is going to outline this development, with an angle towards functional programming.
+
+<center>
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/4smHh"><a href="//imgur.com/4smHh"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+</center>
+
 So I received the [Deep Learning book](http://www.deeplearningbook.org/) a little more than a month ago, and I have had time to read parts I and II. I think that overall the authors successfully explain and condense a lot of research into something digestable. The reason why I use the word condense is because how much information the book contains. The bibliography is 55 pages, so I almost feel that the book should be called *Introduction to Deep Learning Research*, because it is a gateway to so much good material. Another fascinating thing about this book is the discussion it contains. The authors are quite upfront about some criticisms on deep learning and discuss them to a great extent. All in all I look forward to finish reading the book.
 
 I have fiddled around with deep learning since I took a summer-school on it in 2014, where [Hugo Larochelle](https://twitter.com/hugo_larochelle?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor) was giving lectures and he joined us for an epic sword fighting competition/LARP session in the countryside of Denmark. I have followed the evolution of deep learning since, and what has been most amazing is by how much the barrier of entry has been lowered. The current software frameworks make it so easy to get started. After reading the DL book I found a strong inner urge to implement some of these things myself. I think that a way to get a better understanding of programming concepts, algorithms and data structures, is just to go for it and implement it. Also talking about data-structures, deep learning is also becoming a part of that:
@@ -158,12 +164,6 @@ where $\mathbf{W}$ is the weight matrix, $\mathbf{x}$ is the input and $\sigma$ 
 ## Next post
 
 This ended up being a lot longer than I anticipated, but for the next post I aim at finishing the implementation for the MLP, going through backpropagation and simple training on mnist. For the last post the goal is to show how something like dropout can very easily be incorporated in this implementation and how we can disentangle a network using the magrittr package. Implementing other kinds of layers and different optimization strategies is also on the drawing board.
-
-I'm gonna end the post with a small teaser of what is to come! 
-
-The gif below is the evolution of the weights on mnist, trained over the first three epochs. This is a 10 by 10 grid of images, where each individual small patch represents weights going to a single neuron in the first hidden layer. After I saw the content by Grant Sanderson, I wanted to inspect by myself what the network is actually learning.
-
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/4smHh"><a href="//imgur.com/4smHh"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 If you like this post I would greatly appreciate a tweet, my twitter handle is @gumgumeo :)
 
